# standard_lib

./: README.md  pyproject.toml  pytest.ini
tests/: test_counter.py  test_namedtuple.py  test_partials.py
