[tool.poetry]
name = "standard_lib"
version = "0.1.0"
description = ""
authors = ["Patrick Forringer <patrick@forringer.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-expecter = "^1.3"
pytest-watch = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
